<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    tools:context="com.youyou.uucar.UI.Main.MyStrokeFragment.RenterRegisterVerifyError">

    <RelativeLayout
        android:id="@+id/tip_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:gravity="center"
            android:lineSpacingExtra="9dp"
            android:text="@string/renter_register_verify_error_tip"
            android:textColor="@color/c8"
            android:textSize="@dimen/f3" />

        <TextView
            android:id="@+id/service_work_time_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tip"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="@string/service_work_time_title"
            android:textColor="@color/c8"
            android:textSize="@dimen/f3" />

        <LinearLayout
            android:id="@+id/normal_root"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/service_work_time_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_work_time_normal_start_title"
                android:textColor="@color/c13"
                android:textSize="@dimen/f3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_work_time_normal_start"
                android:textColor="@color/c8"
                android:textSize="@dimen/f3" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/time_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/normal_root"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_work_time_holiday_start_title"
                android:textColor="@color/c13"
                android:textSize="@dimen/f3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_work_time_holiday_start"
                android:textColor="@color/c8"
                android:textSize="@dimen/f3" />
        </LinearLayout>

        <TextView
            android:id="@+id/refuse_reason_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_below="@id/time_1"
            android:layout_marginTop="40dp"
            android:textColor="@color/c1"
            android:textSize="@dimen/f3" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="@color/c11">

        <TextView
            android:id="@+id/contact_service"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="45dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="7dp"
            android:textSize="@dimen/f2"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white_button_text_color"
            android:background="@drawable/bottom_left_bottom_bg"
            android:text="@string/contact_service" />

        <TextView
            android:id="@+id/reupload"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="45dp"
            android:layout_marginLeft="8dp"
            android:text="@string/reupload"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="7dp"
            android:layout_marginRight="14dp"
            android:textColor="@color/red_button_text_color"
            android:textSize="@dimen/f2"
            android:background="@drawable/red_button_bg" />
    </LinearLayout>

</RelativeLayout>
