<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="87dp"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="@dimen/f2"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/your_car_release_ok_1"
            android:textColor="@color/c8" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="客服工作时间:"
            android:textColor="@color/c8"
            android:textSize="@dimen/f2"
            android:layout_marginTop="45dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/f2"
            android:text="@string/service_work_day_1"
            android:textColor="@color/c8" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/f2"
            android:text="@string/service_work_day_2"
            android:textColor="@color/c8" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_root"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:background="@color/c11"
        android:layout_alignParentBottom="true"
        android:divider="?android:dividerVertical"
        android:dividerPadding="8dp"
        android:orientation="horizontal"
        android:showDividers="middle">

        <TextView
            android:id="@+id/go_find_car"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="45dp"
            android:gravity="center"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="@dimen/s1"
            android:layout_marginBottom="@dimen/s1"
            android:text="@string/guest"
            android:layout_gravity="center"
            android:textColor="@color/white_button_text_color"
            android:background="@drawable/bottom_left_bottom_bg"
            android:textSize="@dimen/f2" />

        <TextView
            android:id="@+id/continue_release_car"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="45dp"
            android:enabled="true"
            android:layout_marginTop="@dimen/s1"
            android:layout_marginRight="14dp"
            android:layout_marginBottom="@dimen/s1"
            android:layout_marginLeft="@dimen/s1"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/continue_sumbit"
            android:textColor="@color/red_button_text_color"
            android:textSize="@dimen/f2"
            android:background="@drawable/red_button_bg" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_above="@id/bottom_root"
        android:background="@color/c13" />
</RelativeLayout>